add APIs: get client and create client
